# marker_detector

./: .gitmodules  CMakeLists.txt  package.xml
include/armor_detector/: MarkSensor.cpp  Marker.cpp  Marker.h  MarkerSensor.h  RotRect.cpp  RotRect.h  armor_detector.cpp  armor_detector.h  history_manager.cpp  history_manager.h  utils.cpp  utils.h
include/buff_detector/: CurveSolver.h  buff_detector.cpp  buff_detector.h
include/buff_detector/model/: dafu.xml
include/buff_detector/model_manager/: Common.h  ModelManager.cpp  ModelManager.h  Output.h
include/detector/: detect_result.cpp  detect_result.h  detector.cpp  detector.h  detector_config.h
include/detector_controller/: detector_controller.cpp  detector_controller.h
include/params/: armor_params.cpp  armor_params.h  buff_params.cpp  buff_params.h  cam_params.cpp  cam_params.h
msg/: DetectResult.msg  DetectResults.msg
src/: marker_detector_node.cpp
src/armor_detector/: MarkSensor.cpp  Marker.cpp  RotRect.cpp  armor_detector.cpp  history_manager.cpp  utils.cpp
src/buff_detector/: buff_detector.cpp
src/detector/: detect_result.cpp  detector.cpp
src/detector_controller/: detector_controller.cpp
src/params/: armor_params.cpp  buff_params.cpp  cam_params.cpp
